--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -33,14 +33,13 @@
 }
 
 #discount {
-  color: var(--price-color);
-  background: var(--price-second-color);
-  letter-spacing: -1px;
+  color: var(--text-color);
+  background: var(--price-color);
+  letter-spacing: -0.06px;
   border-radius: 4px;
   text-transform: capitalize;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 0.8rem;
-  letter-spacing: -0.06px;
   line-height: 1.3333333333;
   padding: 2px 4px;
 }
@@ -67,4 +66,11 @@
   cursor: pointer;
   color: var(--main-color);
   transform: scale(1.2);
+}
+
+#favHover,
+#iconHover {
+  @media screen and (max-width: 470px) {
+    display: none;
+  }
 }
