--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,7 @@
   --red-color: #d90000;
   --link-color: #007185;
   --link-hover-color: rgb(225, 109, 0);
-}
-
-span {
-  color: var(--light-color) !important;
-  font-size: 1rem !important;
+  --icon-bg-color: #f9f9f9;
 }
 
 #button {
@@ -33,22 +29,13 @@ span {
   padding: 0.5rem 1rem;
   background: transparent;
   border: 1px solid var(--second-color);
-  border-radius: 6rem;
   font-size: 0.9rem;
   color: var(--second-color);
   letter-spacing: 0.1rem;
   font-weight: 500;
   transition: 0.5s ease;
-  @media screen and (max-width: 470px) {
-    padding: 0.5rem 1.5rem;
-  }
-  @media (min-width: 1200px) and (max-width: 1399px) {
-    padding: 0.5rem 1.5rem;
-  }
-  @media (min-width: 1400px) {
-    padding: 0.6rem 2.5rem;
-  }
 }
+
 #button:hover {
   background: var(--main-color);
   color: var(--text-color);
