--- a/src/components/Products/Product.css
+++ b/src/components/Products/Product.css
@@ -1,3 +1,38 @@
+/* left container */
+
+.productSideContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.saveToFav,
+.productImgs {
+  flex: 1;
+  @media only screen and (max-width: 991px) {
+    flex: 0;
+    flex-direction: column;
+  }
+}
+
+#favHover2 i {
+  text-decoration: none;
+  transition: 0.3s ease;
+  transform: scale(1.5);
+  color: var(--orange-color);
+}
+
+#favHover2:hover i {
+  cursor: pointer;
+  color: var(--main-color);
+  transform: scale(1.2);
+}
+
+#favText {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: var(--link-color);
+}
+
 /* right container */
 
 #border {
@@ -67,10 +102,79 @@
 
 #availableOffersTitle {
   color: var(--price-color);
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 500;
 }
 
 .availableOffersList {
-  list-style: none;
+  list-style: circle var(--price-color); /* none if don't want list styling */
+}
+
+.productServices {
+  display: block;
+}
+
+#productServicesIconsHover {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.productServicesIcon > i {
+  display: inline-flex;
+  color: var(--main-color);
+  padding: 10px;
+  background: var(--icon-bg-color);
+  border: 1px solid var(--icon-bg-color);
+  border-radius: 50%;
+  font-size: 1.3rem;
+  align-items: center;
+  transition: 0.3s ease;
+}
+
+.productServices:hover .productServicesIcon:hover > i:hover {
+  transform: scale(0.9);
+}
+
+.productServicesIconText {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: var(--link-color);
+}
+
+#button3 {
+  display: inline-block;
+  padding: 0.6rem 1rem;
+  background: var(--link-color);
+  border: 1px solid var(--link-color);
+  /* border-radius: 6rem; */
+  font-size: 0.9rem;
+  color: var(--text-color);
+  letter-spacing: 0.1rem;
+  font-weight: 500;
+  transition: 0.5s ease-in-out;
+}
+
+#button3:hover {
+  border: 1px solid var(--link-color);
+  background: transparent;
+  color: var(--link-color);
+}
+
+#button2 {
+  display: inline-block;
+  padding: 0.6rem 1rem;
+  background: transparent;
+  border: 1px solid var(--main-color);
+  background: var(--main-color);
+  color: var(--text-color);
+  font-size: 0.9rem;
+  letter-spacing: 0.1rem;
+  font-weight: 500;
+  transition: 0.5s ease-in-out;
+}
+
+#button2:hover {
+  border: 1px solid var(--main-color);
+  background: transparent;
+  color: var(--main-color);
 }
